SPI speed increased. TIM3 initial integration in system (not used yet).

--- a/.cproject
+++ b/.cproject
@@ -253,4 +253,5 @@
 			<resource resourceType="PROJECT" workspacePath="/netX-EtherCAT"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
